crates/vvv/tests/corpus/snapshots/rust-navigation__schema-invalid-target__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "self.run(args, true)"
---
exit 1
--- stdout ---
{"code":"bad_request","message":"command schemas require for_command; call and reply schemas do not accept it","schema":1,"status":"error"}
--- stderr ---
